[project]
name = "comfyui_llama3_8b"
description = "easy using llama3_8b in comfyUI "
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_Llama3_8B"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemx"
DisplayName = "ComfyUI_Llama3_8B"
Icon = ""
